--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,13 +7,14 @@
     android:layout_height="match_parent"
     android:padding="24dp"
     tools:context=".LoginActivity">
+
     <ImageView
         android:id="@+id/img_logo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="246dp"
+        android:layout_height="189dp"
         android:layout_marginTop="48dp"
-        android:src="@drawable/indigo_y_rojo_claro_deportes_electr_nicos_ilustrativo_gaming_logotipo"
         android:contentDescription="Logo de Marketplace"
+        android:src="@drawable/portada"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
