Proyecto al dia y funcionando 14/11/2025

--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".Editar_Perfil_Activity">
+    tools:context=".EditarPerfilActivity">
 
     <!-- AppBar (Barra Superior) con Botón de Retroceso -->
     <com.google.android.material.appbar.AppBarLayout
