--- a/app/src/main/res/layout/item_productos.xml
+++ b/app/src/main/res/layout/item_productos.xml
@@ -63,5 +63,14 @@
 
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_producto_precio"
             app:layout_constraintEnd_toEndOf="parent" />
+        <ImageView
+            android:id="@+id/btnOpciones"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_article"
+            android:layout_alignParentEnd="true"
+            android:padding="4dp"
+            android:contentDescription="Opciones" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
